--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "webpack serve --config config/webpack.dev.js",
     "prod": "webpack --config config/webpack.prod.js",
+    "build": "webpack --config config/webpack.prod.js",
     "serve": "vue-cli-service serve"
   },
   "keywords": [],
